Bug 1383825 - limit the growth of scaling for animated nsDisplayTransform in fallback case. r=mattwoodrow

MozReview-Commit-ID: 25NNa1CKMEM